src/objects/wbsendit__Subscriber_Import__c.object
<CustomObject>
    <fields>
        <fullName>wbsendit__Clear_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Clear blank values when updating Campaign Monitor.</inlineHelpText>
        <label>Clear Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wbsendit__Import_Title__c</fullName>
        <label>Import Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Import_Type__c</fullName>
        <label>Import Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>SQOL</fullName>
                </value>
                <value>
                    <fullName>listview</fullName>
                    <label>List View</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Job_Id__c</fullName>
        <description>Internal Salesforce Job Id,</description>
        <label>Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Last_Run__c</fullName>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wbsendit__Mapping__c</fullName>
        <label>Mapping</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wbsendit__Next_Run__c</fullName>
        <label>Next Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wbsendit__Param__c</fullName>
        <label>Param</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Preferred_Time__c</fullName>
        <description>Preferred Run Time</description>
        <label>Preferred Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01:00</fullName>
                    <default>true</default>
                    <label>01:00</label>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
                <value>
                    <fullName>00:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Refresh_Type__c</fullName>
        <defaultValue>&quot;Update&quot;</defaultValue>
        <label>Refresh Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Replace</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                    <default>true</default>
                    <label>Update</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Results_Link__c</fullName>
        <formula>HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;ImportWizardSchedule?id=&quot; +  Id , &quot;View&quot;, &quot;_self&quot;)</formula>
        <label>Results</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Results__c</fullName>
        <inlineHelpText>Internal field.</inlineHelpText>
        <label>Results JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wbsendit__Run_As__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Running As</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scheduled_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__Run_At__c</fullName>
        <inlineHelpText>Run the import on the selected hours.</inlineHelpText>
        <label>Run At</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
                <value>
                    <fullName>00:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__SOQL__c</fullName>
        <label>SOQL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wbsendit__Schedule_Type__c</fullName>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Once Off</fullName>
                    <default>true</default>
                    <label>Once Off</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Scheduled_Days__c</fullName>
        <label>Scheduled Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>mon</fullName>
                    <label>Mon</label>
                </value>
                <value>
                    <fullName>tue</fullName>
                    <label>Tue</label>
                </value>
                <value>
                    <fullName>wed</fullName>
                    <label>Wed</label>
                </value>
                <value>
                    <fullName>thu</fullName>
                    <label>Thu</label>
                </value>
                <value>
                    <fullName>fri</fullName>
                    <label>Fri</label>
                </value>
                <value>
                    <fullName>sat</fullName>
                    <label>Sat</label>
                </value>
                <value>
                    <fullName>sun</fullName>
                    <label>Sun</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Segment_Code__c</fullName>
        <inlineHelpText>The code/number links the import/segment with the membership record.</inlineHelpText>
        <label>Segment Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Segment_Id__c</fullName>
        <label>Segment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Segment_Name__c</fullName>
        <label>Segment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Start_Run__c</fullName>
        <label>Start Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wbsendit__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Updating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Subscriber_List__c</fullName>
        <label>Subscriber List</label>
        <referenceTo>wbsendit__Subscriber_List__c</referenceTo>
        <relationshipLabel>Subscriber Imports</relationshipLabel>
        <relationshipName>Subscriber_Imports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Subscriber Import</label>
    <listViews>
        <fullName>wbsendit__All</fullName>
        <columns>wbsendit__Job_Id__c</columns>
        <columns>wbsendit__Results_Link__c</columns>
        <columns>NAME</columns>
        <columns>wbsendit__Import_Type__c</columns>
        <columns>wbsendit__Schedule_Type__c</columns>
        <columns>wbsendit__Run_As__c</columns>
        <columns>wbsendit__Results__c</columns>
        <columns>wbsendit__SOQL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriber Imports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>